--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   
     "WEB_CONCURRENCY": {
       "description": "The number of processes to run.",
-      "value": "5"
+      "value": ""
     }
   }
 }
