--- a/app.json
+++ b/app.json
@@ -1,12 +1,6 @@
 {
   "name": "Zendesk Incremental Tickets",
   "description": "This app does one little thing, and does it well.",
-  "env": {  
-    "WEB_CONCURRENCY": {
-      "description": "The number of processes to run.",
-      "value": ""
-    }
-  },
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
@@ -14,5 +8,9 @@
     {
       "url": "heroku/ruby"
     }
+  ],
+  "addons": [
+  	"adminium:petproject",
+  	"cleardb:ignite"
   ]
 }
